--- a/gooloom-was/src/main/resources/static/index.html
+++ b/gooloom-was/src/main/resources/static/index.html
@@ -9,20 +9,21 @@
 <main>
     <div class="navbar" id="home">
         <ul>
-            <li name="About" href="#about"> Gooloom-CGV </li>
-            <li><a href="/basic/members"> 회원 관리 </a></li>
-            <li><a href="/product/items"> 상품 관리 </a></li>
-            <li><a href="/about/contact"> Contact </a></li>
+
+            <li name="About" href="#about"><h1> Gooloom-CGV </h1></li>
+            <li><a href="/basic/members"><h2> Fast Order 시작하기 </h2></a></li>
+            <li><a href="/product/items"><h2> 나의 Fast Order </h2>></a></li>
+<!--            <li><a href="/about/contact"> Contact </a></li>-->
         </ul>
     </div>
 </main>
 
-<section name="Title-Page">
-    <div name="title-page" class="title">
-        <h1> CGV </h1>
-        <p> Fast Order </p>
-    </div>
-</section>
+<!--<section name="Title-Page">-->
+<!--    <div name="title-page" class="title">-->
+<!--        <h1> CGV </h1>-->
+<!--        <p> Fast Order </p>-->
+<!--    </div>-->
+<!--</section>-->
 <section name="about-section" id="about">
     <div class="about">
         <h1> Fast Order 란? </h1>
