update gooloom-was with Karts

--- a/gooloom-was/src/main/resources/static/index.html
+++ b/gooloom-was/src/main/resources/static/index.html
@@ -11,8 +11,8 @@
         <ul>
 
             <li name="About" href="#about"><h1> Gooloom-CGV </h1></li>
-            <li><a href="/basic/members"><h2> Fast Order 시작하기 </h2></a></li>
-            <li><a href="/product/items"><h2> 나의 Fast Order </h2>></a></li>
+            <li><a href="/product/items"><h2> Fast Order 시작하기 </h2></a></li>
+            <li><a href="/kart/karts"><h2> 나의 Fast Order </h2>></a></li>
 <!--            <li><a href="/about/contact"> Contact </a></li>-->
         </ul>
     </div>
