--- a/gooloom-was/src/main/resources/static/index.html
+++ b/gooloom-was/src/main/resources/static/index.html
@@ -35,6 +35,8 @@
 <!--        <h1> Fast Order 란? </h1>-->
 <!--        <h2> (주) 구름 건설 소개 </h2>-->
         <ul>
+            <li><a href="/basic/members/joinForm"><h2> 회원가입 </h2></a></li>
+            <li><a href="/basic/members"><h2> 로그인 </h2></a></li>
             <li><a href="/product/items"><h2> Fast Order 시작하기 </h2></a></li>
             <li><a href="/cart/myCart"><h2> 나의 Fast Order </h2></a></li>
         </ul>
