--- a/gooloom-was/src/main/resources/static/index.html
+++ b/gooloom-was/src/main/resources/static/index.html
@@ -19,7 +19,7 @@
 <main>
     <div class="navbar" id="home">
         <ul>
-            <li name="About" href="#about"><h1> CICD / TEST  </h1></li>
+            <li name="About" href="#about"><h1> Gooloom - CGV  </h1></li>
         </ul>
     </div>
 </main>
